--- a/TODO
+++ b/TODO
@@ -19,6 +19,15 @@ $Id$
 - add some more folder properties to config dialog, i.e. be able to
   switch off automatic notification of incoming emails.
 
+- Proper NNTP support and POP3 fetch solution are the same thing:
+  - Use mail_fetch_overview() and implement it on the MailFolder
+    interface. Use that new function in wxFolderView::Update() to
+    display header lines. For NNTP this will only list the messages
+    which exist on the server and are unread (not deleted).
+    Use this somehow to update the count of messages in the folder.
+  - wxMessageView needs to check whether the folder type is MF_NNTP and if
+    so, automatically delete each message which gets displayed.
+
 - add references (and In-Reply-To: ?) headers to message replies
 - fix my OpenAnyFolderDialog to take hostname and folderpath, as
    required for imap  --> drop the dialog?
